# nc-movie-scraper

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/moviescraper/: __main__.py  browser.py  json_requests.py  onyx.py  scraper.py
