[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ncmoviescraper"
version = "0.1.0"
dependencies = [
    "blinker==1.7.0",
    "python-dateutil",
    "requests",
    "selenium",
    "selenium-wire",
    "setuptools",
]

[tool.hatch.build.targets.wheel]
packages = ["src/moviescraper"]
